# sourmash_plugin_pangenomics

./: .gitignore  Makefile  README.md  environment.yml  pyproject.toml
.github/workflows/: build-test.yml
src/: sourmash_plugin_pangenomics.py
test_workflow/: .gitignore  Makefile  Snakefile
tests/: test_sourmash_plugin.py
